[PUSH] Fixed problem with Button on job list for posting a new job. Added margin to right side of job list to fix wrapping issues WRT date

--- a/modules/theme/client/css/styles.css
+++ b/modules/theme/client/css/styles.css
@@ -4519,6 +4519,10 @@ tos ol > li {
 .outset-list .job-list .post .content.lead-content {
   padding-left: 140px;
 }
+.application-list .job-list .post .content.lead-content h3.post-title,
+.outset-list .job-list .post .content.lead-content h3.post-title {
+  margin-right: 160px;
+}
 .application-list .job-list .post .content .list-picture,
 .outset-list .job-list .post .content .list-picture {
   display: inline-block;
