--- a/modules/theme/client/less/outset.less
+++ b/modules/theme/client/less/outset.less
@@ -1272,6 +1272,10 @@ os-bg-check-summary > .pricing {
 
       &.lead-content {
         padding-left : 140px;
+
+        h3.post-title {
+          margin-right: 160px;
+        }
       }
 
       .list-picture {
